# app/app/api/app_http.pb.go
@@ -28,6 +28,7 @@ const OperationAppAdminConfigUpdate = "/api.App/AdminConfigUpdate"
 const OperationAppAdminCreateAccount = "/api.App/AdminCreateAccount"
 const OperationAppAdminDailyFee = "/api.App/AdminDailyFee"
 const OperationAppAdminDailyRecommendReward = "/api.App/AdminDailyRecommendReward"
+const OperationAppAdminDailyRecommendTopReward = "/api.App/AdminDailyRecommendTopReward"
 const OperationAppAdminDailyWithdrawReward = "/api.App/AdminDailyWithdrawReward"
 const OperationAppAdminFee = "/api.App/AdminFee"
 const OperationAppAdminList = "/api.App/AdminList"
@@ -76,6 +77,7 @@ type AppHTTPServer interface {
 	AdminCreateAccount(context.Context, *AdminCreateAccountRequest) (*AdminCreateAccountReply, error)
 	AdminDailyFee(context.Context, *AdminDailyFeeRequest) (*AdminDailyFeeReply, error)
 	AdminDailyRecommendReward(context.Context, *AdminDailyRecommendRewardRequest) (*AdminDailyRecommendRewardReply, error)
+	AdminDailyRecommendTopReward(context.Context, *AdminDailyRecommendTopRewardRequest) (*AdminDailyRecommendTopRewardReply, error)
 	AdminDailyWithdrawReward(context.Context, *AdminDailyWithdrawRewardRequest) (*AdminDailyWithdrawRewardReply, error)
 	AdminFee(context.Context, *AdminFeeRequest) (*AdminFeeReply, error)
 	AdminList(context.Context, *AdminListRequest) (*AdminListReply, error)
@@ -160,6 +162,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.POST("/api/admin_dhb/auth_delete", _App_AuthAdminDelete0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/check_and_insert_recommend_area", _App_CheckAndInsertRecommendArea0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/daily_recommend_reward", _App_AdminDailyRecommendReward0_HTTP_Handler(srv))
+	r.GET("/api/admin_dhb/daily_recommend_top_reward", _App_AdminDailyRecommendTopReward0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/daily_withdraw_reward", _App_AdminDailyWithdrawReward0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/fix_reward", _App_FixReward0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/fix_locations", _App_FixLocations0_HTTP_Handler(srv))
@@ -1018,6 +1021,25 @@ func _App_AdminDailyRecommendReward0_HTTP_Handler(srv AppHTTPServer) func(ctx ht
 	}
 }
 
+func _App_AdminDailyRecommendTopReward0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminDailyRecommendTopRewardRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppAdminDailyRecommendTopReward)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminDailyRecommendTopReward(ctx, req.(*AdminDailyRecommendTopRewardRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminDailyRecommendTopRewardReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 func _App_AdminDailyWithdrawReward0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in AdminDailyWithdrawRewardRequest
@@ -1085,6 +1107,7 @@ type AppHTTPClient interface {
 	AdminCreateAccount(ctx context.Context, req *AdminCreateAccountRequest, opts ...http.CallOption) (rsp *AdminCreateAccountReply, err error)
 	AdminDailyFee(ctx context.Context, req *AdminDailyFeeRequest, opts ...http.CallOption) (rsp *AdminDailyFeeReply, err error)
 	AdminDailyRecommendReward(ctx context.Context, req *AdminDailyRecommendRewardRequest, opts ...http.CallOption) (rsp *AdminDailyRecommendRewardReply, err error)
+	AdminDailyRecommendTopReward(ctx context.Context, req *AdminDailyRecommendTopRewardRequest, opts ...http.CallOption) (rsp *AdminDailyRecommendTopRewardReply, err error)
 	AdminDailyWithdrawReward(ctx context.Context, req *AdminDailyWithdrawRewardRequest, opts ...http.CallOption) (rsp *AdminDailyWithdrawRewardReply, err error)
 	AdminFee(ctx context.Context, req *AdminFeeRequest, opts ...http.CallOption) (rsp *AdminFeeReply, err error)
 	AdminList(ctx context.Context, req *AdminListRequest, opts ...http.CallOption) (rsp *AdminListReply, err error)
@@ -1241,6 +1264,19 @@ func (c *AppHTTPClientImpl) AdminDailyRecommendReward(ctx context.Context, in *A
 	pattern := "/api/admin_dhb/daily_recommend_reward"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAppAdminDailyRecommendReward))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) AdminDailyRecommendTopReward(ctx context.Context, in *AdminDailyRecommendTopRewardRequest, opts ...http.CallOption) (*AdminDailyRecommendTopRewardReply, error) {
+	var out AdminDailyRecommendTopRewardReply
+	pattern := "/api/admin_dhb/daily_recommend_top_reward"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAppAdminDailyRecommendTopReward))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
